Parcial 2/kubernetes/mysql-consul.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: microapp
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: hashicorp/consul:1.14
        args: ["agent", "-server", "-ui", "-node=server-1", "-bootstrap-expect=1", "-client=0.0.0.0"]
        ports:
        - containerPort: 8500
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: microapp
spec:
  selector:
    app: consul
  ports:
  - port: 8500
    targetPort: 8500
  type: ClusterIP
